creativeApprochH2 fixed on mobile

--- a/src/CSS/mobileHomePage.css
+++ b/src/CSS/mobileHomePage.css
@@ -139,7 +139,7 @@
         line-height: normal;
         letter-spacing: 0.4px;
         text-transform: uppercase;
-        top: 130px;
+        top: 175px;
         left: 1rem;
     }
     .creativeApprochH2{
@@ -148,7 +148,7 @@
         font-size: 20px;
         font-style: normal;
         font-weight: 400;
-        top: 155px;
+        top: 199px;
         left: 9rem;
     }
     .keySkills{
